--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ h1 {text-align: center; color: white;}
 
 
 
-.title-div {background-color: #FF7777; padding: 20% 2% 25%; margin: 0}
+.title-div {background-color: #FF2626; padding: 10% 2% 25%; margin: 0}
 
 .title-text {color: white; text-align: center; font-size: 3rem;}
 
@@ -13,9 +13,10 @@ h1 {text-align: center; color: white;}
 
 
 
+.pictureCarousel {padding-top: 10%;}
 
+.container {margin-right: 0px; text-align: center; padding: 10% 10%; padding-bottom: 30%;}
 
-.container {margin-right: 0px; background-color: #F5C6A5; text-align: center; padding: 10% 10%;}
 
 .menu {color: black; padding-bottom: 1%; padding-top: 4%; text-align: center;  background-color: #F5C6A5; margin: 0;}
 
@@ -23,10 +24,53 @@ h1 {text-align: center; color: white;}
 
 .menu-headers {color: black; padding-bottom: 3%;}
 
-.menu-text {color: #476072; text-align: center; background-color: #F5C6A5; margin: 0 0; padding-bottom: 3%;}
+.menu-text {color: #9A9483; text-align: center; background-color: #F5C6A5; margin: 0 0; padding-bottom: 3%;}
 
 .row {background-color: #F5C6A5; padding-bottom: 5%;}
 
+.picture-shrimp {position: absolute; margin-left: 5%;}
+
+.picture-crab {position: absolute; margin-left: 10%;}
+
+.picture-crawfish {position: absolute; margin-left: 2%;}
+
+.button-div {background-color: #FF2626; text-align: center;}
+
+.menu-pictures {background-color: #F5C6A5;
+								text-align: center;
+								color: white;}
+
+.carousel-item{
+  padding: 12% 7% 15%;
+}
+
+.testimonial-image {
+  width: 40%;
+  margin: 40px;
+}
+
+.css-button {
+	font-family: Arial Black;
+	color: white;
+	font-size: 19px;
+	border-radius: 5px;
+	border: 1px #F5C6A5 solid;
+	padding: 10px 18px;
+	background-color: #F5C6A5;
+	text-shadow: 1px 1px 1px #528ecc;
+	box-shadow: inset 1px 1px 2px 0px #bbdaf7;
+	cursor: pointer;
+	display: inline-flex;
+	align-items: center;
+}
+
+.css-button:hover {
+	background-color: #FF2626;
+  color: white;
+}
 
 
-.ordering {background-color: #FF7777; color: white; text-align: center; padding: 5% 5%;}
+
+.ordering {background-color: #FF2626; color: white; text-align: center; padding: 8% 8%;}
+
+.fab {position: absolute; left: 46%; up: 55%;}
