fixed the padding problem

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-body {margin: 0; padding: -1000px; background-color: #F96666;}
+body {margin: 0; background-color: #F96666;}
 
 h1 {text-align: center; color: white;}
 
